Bug 163535 - 'Copy' and 'paste' hotkeys problem
Summary: 'Copy' and 'paste' hotkeys problem
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.50.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 163954 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-08 16:48 UTC by Alexey Chernov
Modified: 2008-12-27 22:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Chernov 2008-06-08 16:48:53 UTC
Version:           0.50.1 (using KDE 4.0.5)
Installed from:    Compiled From Sources
Compiler:          GCC 4.1.2 Target: x86_64-unknown-linux-gnu Configured with: ../gcc-4.1.2/configure --prefix=/usr --libexecdir=/usr/lib --enable-shared --enable-threads=posix --enable-__cxa_atexit --enable-clocale=gnu --enable-languages=c,c++ --disable-multilib Thread model: posix
OS:                Linux

There's some problems with hotkeys in Chat and History windows. So, it's unable to copy from chat with 'copy' hotkey, it is possible to copy only from entering box. So as for History window. To copy from history we should use 'Copy' command from right-click menu, not hotkey.

Additionally, when I paste something it pastes twice.
Comment 1 Detlev Casanova 2008-06-13 10:56:44 UTC
*** Bug 163954 has been marked as a duplicate of this bug. ***
Comment 2 Dustin Steiner 2008-06-13 10:59:38 UTC
I can confirm the bug in Kopete 0.50.1 using Fedora 9 and KDE 4.0.5
Comment 3 Roman K. 2008-07-07 23:56:03 UTC
I can confirm this bug with kopete from KDE 4.0.85 (KDE 4.1 >= 20080703) openSUSE packages. strg + c for copy doesn't work neither in chat window nor in history. I always have to rightclick, and that is not very comfortable.
Comment 4 Stefan Sarzio 2008-07-18 11:32:49 UTC
Same on Kubuntu 8.04, KDE 4.1 RC 1
Comment 5 Maxym Kit 2008-07-19 10:46:52 UTC
I can confirm the bug in Kopete 0.50.1 using Fedora 9 and KDE 4.0.5
Also the cursor positioning using Ctrl key does not work properly.
Comment 6 Dominik Tritscher 2008-07-22 19:41:52 UTC
I can confirm that bug in Kopete 0.50.80 from Kubuntu packages.
Comment 7 craig millar 2008-07-30 19:02:21 UTC
Confirmed in Kopete 0.50.80, KDE 4.1.0, openSUSE 11.0
Comment 8 Dominik Schmidt 2008-08-13 14:03:47 UTC
SVN commit 846386 by dschmidt:

Fix CTRL+C cannot be used to copy already sent messages in chatwindow.
Still not working in history viewer.
CCBUG: 163535


 M  +12 -1     krichtexteditpart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=846386
Comment 9 René Krell 2008-08-26 11:03:51 UTC
Can confirm that and would be nice to have for:
- Kopete 0.60.1 (KDE 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) "release 40.1", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
- Operating System  Linux (i686) release 2.6.25.11-0.1-default
- Compiler  gcc
Copy from message history using CTRL-C does not work.
Comment 10 Roman Jarosz 2008-12-27 22:47:42 UTC
SVN commit 902271 by rjarosz:

Fix copy hotkey in history.

BUG: 163535



 M  +9 -12     historydialog.cpp  
 M  +14 -38    historyviewer.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902271