Fix copy hotkey in history.

BUG: 163535


svn path=/trunk/KDE/kdenetwork/kopete/; revision=902271